[package]
name = "riker"
version = "0.3.2"
authors = ["Lee Smith <lee@riker.rs>", "Olexiy Buyanskyy <olexiyb@gmail.com>"]
edition = "2018"
description = "Easily build fast, highly concurrent and resilient applications. An Actor Framework for Rust."
homepage = "https://riker.rs"
repository = "https://github.com/actors-rs/actors.rs"
license = "MIT"
readme = "README.md"
keywords = ["actor", "actors", "actor-model", "async", "cqrs", "event_sourcing"]

[badges]
travis-ci = { repository = "actors-rs/actors.rs" }

[dependencies]
riker-macros = { path = "riker-macros", version = "0.1" }
bytes = "0.4"
chrono = "0.4"
config = "0.9"
futures-preview = "0.3.0-alpha.16"
log = { version = "0.4", features = ["std"] }
rand = "0.4"
regex = "0.2"
uuid = { version = "0.6", features = ["v4"] }
pin-utils = "0.1.0-alpha.4"


[dev-dependencies]
riker-testkit = "0.1.0"
