[package]
name = "actors-rs"
version = "0.1.4"
authors = ["Lee Smith <lee@riker.rs>", "Olexiy Buyanskyy <olexiyb@gmail.com>"]
edition = "2018"
description = "Easily build fast, highly concurrent and resilient applications. An Actor Framework for Rust."
homepage = "https://actors-rs.github.io/"
repository = "https://github.com/actors-rs/actors.rs"
license = "MIT"
readme = "README.md"
keywords = ["actor", "actor-model", "async", "cqrs", "event_sourcing"]
build = "build.rs"

[badges]
travis-ci = { repository = "actors-rs/actors.rs" }

[dependencies]
actors-macros = "0.1.1"
chrono = "0.4"
config = "0.10"
futures-preview = "0.3.0-alpha.19"
rand = "0.7"
regex = "1"
uuid = { version = "0.7", features = ["v4"] }
pin-utils = "0.1.0-alpha.4"
slog = "2.5"
slog-stdlog = "4.0"
slog-scope = "4.1"

[dev-dependencies]
actors-rs = { path = "./", version = "0.1.3"}
riker-testkit = "0.1.0"
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"

[workspace]
members = [
  "actors-macros"
]

[patch.crates-io]
actors-macros = { path = "actors-macros", version = "0.1.1" }
actors-rs = { path = "./", version = "0.1.4" }

[[example]]
name = "basic"
