[package]
name = "actors-macros"
version = "0.1.0"
authors = ["Lee Smith <lee@riker.rs>", "Olexiy Buyanskyy <olexiyb@gmail.com>"]
edition = "2018"
description = "Macro crate for Riker actor framework"
homepage = "https://actors-rs.github.io"
repository = "https://github.com/actors-rs/actors.rs"
license = "MIT"
readme = "README.md"
keywords = ["actors", "actor-model", "async", "cqrs", "event_sourcing"]

[lib]
proc-macro = true

[dependencies]
syn = { version ="0.15.39", features = ["parsing", "full", "extra-traits", "proc-macro"] }
quote = "0.6.3"
proc-macro2 = "0.4.4"

