[package]
name = "actors-macros"
version = "0.1.1"
authors = ["Lee Smith <lee@riker.rs>", "Olexiy Buyanskyy <olexiyb@gmail.com>"]
edition = "2018"
description = "Macro crate for Riker actor framework"
homepage = "https://actors-rs.github.io"
repository = "https://github.com/actors-rs/actors.rs"
license = "MIT"
readme = "README.md"
keywords = ["actors", "actor-model", "async", "cqrs", "event_sourcing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version ="1.0", features = ["parsing", "full", "extra-traits", "proc-macro"] }
